hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_nested_concurrent.php
<?hh

async function foo(): Awaitable<void> {
  concurrent {
    concurrent {
      $x = await genx();
      await geny();
    }
    await genz();
  }
}
